eks_templates/ingress_test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: my-cloudera-cluster
    servicePort: 8080
  #rules:
  #- host: my-cloudera-cluster.com
  #  http:
  #    paths:
  #    - path: /*
  #      backend:
  #        serviceName: my-cloudera-cluster
  #        servicePort: 80
